# vllm-mlx-patched

./: .gitignore  CHANGELOG.md  README.md  UPSTREAM_PIN.md  lessons.md  pyproject.toml
.claude/commands/: dcr.md  docs-sync.md  qa.md  ux.md  whats-next.md
.claude/research/: 20260421-issue-29-upstream-research.md
.claude/skills/dcr/: SKILL.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/qa/: SKILL.md
.claude/skills/ux/: SKILL.md
.claude/skills/whats-next/: SKILL.md
.github/workflows/: ci.yml
docs/development/: 2026-04-29-stream-affinity-fix-plan.md  architecture.md  vllm-mlx-vs-vllm.md
docs/guides/: effort-and-budget.md  reasoning.md  tool-calling.md
docs/reference/: cli.md
docs/research/: performance-optimization-research.md
docs/testing/: 2026-04-18-active-batch-drift-fix-verification.md  2026-04-18-answer-quality-vs-budget.md  2026-04-18-cross-family-validation.md  2026-04-18-post-merge-validation.md  2026-04-18-thinking-budget-empirical-findings.md  2026-04-19-metal-innocent-victim-concurrent-mlx-lm-training.md  2026-04-19-qwen36-first-turn-runaway-under-claude-code-payload.md  2026-04-21-qwen3-35b-a3b-concurrent-heavy-payload-deadlock.md  2026-04-23-qwen3-streaming-thinking-missing-signature-silent-text-drop.md  claude-shape-heavy-payload.json  h1-verify.sh
scripts/: thinking_budget_benchmark.py  thinking_budget_matrix.py
tests/: conftest.py  test_anthropic_adapter.py  test_anthropic_adapter_effort.py  test_anthropic_adapter_no_think.py  test_anthropic_adapter_thinking_block.py  test_anthropic_interleaved_thinking.py  test_anthropic_models.py  test_anthropic_non_streaming_thinking.py  test_anthropic_streaming_thinking_signature.py  test_anthropic_thinking_block_schema.py  test_bench_compile.py  test_budget_ceiling.py  test_cache_endpoints.py  test_chat_template_kwargs_plumbing.py  test_cli_argparse.py  test_cli_max_thinking_token_budget.py  test_compile.py  test_effort_resolver.py  test_engine_core_idle_reap.py  test_fast_health_thread.py  test_fold_thinking_as_text.py  test_gemma4_openai_format.py  test_gemma4_tool_parser.py  test_harmony_parser_contract.py  test_issue_29_end_to_end.py  test_memory_cache.py  test_memory_cache_mlx.py  test_metrics.py  test_missing_chat_template.py  test_mllm_prefix_cache_non_trimmable.py  test_mllm_prefix_cache_repeats.py  test_mllm_prompt_tokens.py  test_mllm_scheduler_prompt_tokens.py  test_mlx_lm_api_contract.py  test_mlx_lm_arrays_cache_concurrent.py  test_mlx_lm_deepseek_v4_present.py  test_mlx_streams.py  test_openai_reasoning_effort.py  test_output_collector.py  test_paged_cache.py  (+27 more)
tests/data/: thinking_budget_matrix.example.json
vllm_mlx/: __init__.py  cli.py  engine_core.py  fast_health.py  memory_cache.py  metrics.py  mllm_batch_generator.py  mllm_scheduler.py  output_collector.py  paged_cache.py  prefix_cache.py  request.py  scheduler.py  server.py
vllm_mlx/api/: __init__.py  anthropic_adapter.py  anthropic_models.py  budget_ceiling.py  effort.py  models.py  thinking_policy.py  utils.py
vllm_mlx/engine/: base.py  batched.py  simple.py
vllm_mlx/logits_processors/: __init__.py  thinking_budget.py
vllm_mlx/models/: mllm.py
vllm_mlx/reasoning/: base.py  gemma4_parser.py  harmony_parser.py  qwen3_parser.py
vllm_mlx/utils/: bg_trace.py  mamba_cache.py  trace.py
